--- a/app.json
+++ b/app.json
@@ -18,13 +18,13 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "yet-exercise"
+      "bundleIdentifier": "yet"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF",
-        "package": "yet-exercise"
+        "package": "yet"
       }
     },
     "web": {
